<resources>
    <string name="app_name">Appli3A</string>
    <string name="button1">Button</string>
    <string name="button_main">Send</string>
    <string name="send">Send</string>
    <string name="activity2_name">activity_main2</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_message">Send</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header">Hello again!!</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="example_application">Example application</string>
</resources>
